[package]
name = "bevy_expected_components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Runtime validation for Bevy component dependencies"
repository = "https://github.com/yourusername/bevy_expected_components"
keywords = ["bevy", "ecs", "gamedev", "validation"]
categories = ["game-development", "development-tools::debugging"]
readme = "README.md"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_ecs"] }
inventory = "0.3"
bevy_expected_components_macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_ecs"] }

[workspace]
members = ["macros"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
