[package]
name = "bevy_expected_components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Runtime validation for Bevy component dependencies"
repository = "https://github.com/peterellisjones/bevy_expected_components"
keywords = ["bevy", "ecs", "gamedev", "validation"]
categories = ["game-development", "development-tools::debugging"]
readme = "README.md"

[dependencies]
bevy_ecs = "0.18"
bevy_app = "0.18"
inventory = "0.3"
bevy_expected_components_macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
bevy_ecs = "0.18"
bevy_app = "0.18"

[workspace]
members = ["macros"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
